# Houdini-Roblox

./: .gitignore
daemon/: .justfile  Cargo.toml
daemon/.cargo/: config.toml
daemon/src/: application.rs  asset_dir.rs  error.rs  lib.rs  main.rs  message.rs  state.rs
daemon/src/asset/: asset_param.rs  mesh_data.rs  mod.rs
daemon/src/routes/: close.rs  connect.rs  create_folder.rs  delete_file.rs  get_message.rs  get_messages.rs  list_files.rs  mod.rs  open_asset.rs  open_hda.rs  rename_file.rs  send_message.rs
daemon/src/session/: asset.rs  houdini_session.rs  mod.rs  roblox_session.rs  session.rs  session_registry.rs
daemon/src/utils/: extract_session_id.rs  hapi_environment.rs  mod.rs
plugin/: .gitignore  .justfile  darklua.json  darklua.jsonc  default.project.json  selene.toml  sourcemap.project.json  tarmac-manifest.toml  tarmac.toml  wally.toml
plugin/src/Localization/: SourceStrings.csv
plugin/src/Src/: AppContainer.lua  ContextProvider.lua  MainPlugin.lua  PluginConstants.lua  TarmacAssetUtils.lua  TarmacAssets.lua
plugin/src/Src/Components/App/: ConnectScreen.lua  MainView.lua
plugin/src/Src/Components/Plugin/: DockWidget.lua  Toolbar.lua  ToolbarButton.lua
plugin/src/Src/Components/Studio/: Button.lua  WidgetBackground.lua
plugin/src/Src/Contexts/: Daemon.lua  DockWidget.lua  FileSystem.lua  Plugin.lua  StudioTheme.lua  WidgetDimensions.lua
plugin/src/Src/Hooks/: useI18n.lua  useSignal.lua  useTextBounds.lua
plugin/src/Src/Screens/: ErrorScreen.lua
plugin/src/Src/Screens/Connect/: init.lua
plugin/src/Src/Screens/Connected/: init.lua
plugin/src/Src/Systems/: DaemonBridge.lua  DaemonConnection.lua
plugin/src/Src/Types/: HttpTypes.lua
plugin/src/Src/Utils/: DpiProvider.lua  FileUtils.lua  ThemeUtils.lua
(+22 files in other folders)
