[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
env_logger = "0.10.0"
futures = { version = "0.3.28", default-features = false, features = ["std", "alloc"] }
hapi-rs = { git = "https://github.com/alexxbb/hapi-rs", rev = "70d9d19" }
log = "0.4.20"
rfd = "0.12.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
